samples/_failures_safe/1761095614_2bbafa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75e5fd4f.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_75e5fd4f.c:183:15: error: expected ‘)’ at end of input
  183 |     if (!graph
      |        ~      ^
      |               )
./samples/SAFE/__tmp_75e5fd4f.c:183:5: error: expected declaration or statement at end of input
  183 |     if (!graph
      |     ^~
